--- a/public/user/signup.html
+++ b/public/user/signup.html
@@ -15,7 +15,7 @@
         </div>
         <h2 class="text-3xl font-bold">Sign Up</h2>
         <p class="text-gray-400">Create an account with EmpirePay...</p>
-        <form class="space-y-4" action="sign-in.html" method="POST">
+        <form class="space-y-4" onclick="signup()">
             <div>
                 <label class="block text-sm font-medium mb-1" for="username">Username <span class="text-red-500">*</span></label>
                 <input class="w-full px-3 py-2 bg-gray-800 text-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-purple-600" type="text" id="username" placeholder="Enter your fullname" required>
@@ -37,9 +37,9 @@
                     </button>
                 </div>
             </div>
-            <button class="w-full py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-600" type="submit">Submit</button>
+            <button class="w-full py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-600" type="submit" onclick="signup()">Submit</button>
         </form>
-        <p class="text-center text-gray-400">Already have an account? <a href="sign-in.html" class="text-blue-500">Login</a></p>
+        <p class="text-center text-gray-400">Already have an account? <a href="/login" class="text-blue-500">Login</a></p>
     </div>
     <script>
         function togglePasswordVisibility() {
@@ -55,6 +55,29 @@
                 passwordToggle.classList.add('fa-eye-slash');
             }
         }
+        async function signup() {
+                const username = document.getElementById("username").value;
+                const email = document.getElementById("email").value;
+                const phone = document.getElementById("phone").value;
+                const password = document.getElementById("password").value;
+                const message = document.getElementById("message");
+
+                if (!username || !email || !phone || !password) {
+                    message.style.color = "red";
+                    message.textContent = "All fields are required!";
+                    return;
+                }
+
+                const response = await fetch("/signup", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ username, email, phone, password })
+                });
+
+                const data = await response.json();
+                message.style.color = response.ok ? "green" : "red";
+                message.textContent = data.message || data.error;
+            }
     </script>
 </body>
 </html>
